package com.chickson.eyepaxnews.util

import javax.inject.Inject

class TestTags @Inject constructor()  {
    val usernameTag = "username_text_field_tag"
    val passwordTag = "password_text_field_tag"
}